--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
     "name" : "projectwatch"
     , "version": "0.1.0"
     , "author": "Esa-Matti Suuronen"
+    , "homepage": "https://github.com/epeli/Projectwatch"
     , "main": "./index"
     , "bin": { "projectwatch": "./bin/projectwatch" }
     , "dependencies": {
         "coffee-script": ""
         , "watch": ""
         , "findit": ""
+        , "iniparser": ""
         , "gex": ""
     }
-    , "devDependencies": {
-        "supervisor": ""
-    }
 }
-
-
