--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
     "name" : "projectwatch"
-    , "version": "0.1.0"
+    , "version": "0.1.1"
     , "author": "Esa-Matti Suuronen"
     , "homepage": "https://github.com/epeli/Projectwatch"
+    , "repository":
+        { "type": "git"
+        , "url": "git://github.com/epeli/Projectwatch.git"
+        }
     , "main": "./index"
     , "bin": { "projectwatch": "./bin/projectwatch" }
     , "dependencies": {
