Start work for webview

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         , "findit": ""
         , "iniparser": ""
         , "gex": ""
+        , "express": ""
+        , "jade": ""
+        , "now": ""
     }
 }
