--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         , "watch": ""
         , "findit": ""
         , "iniparser": ""
+        , "underscore": ""
         , "gex": ""
         , "express": ""
         , "jade": ""
