Add web view for tasks.

--- a/examples/coffee/projectwatch.cfg
+++ b/examples/coffee/projectwatch.cfg
@@ -1,12 +1,12 @@
-[My project coffees]
+[myproject:coffeescript]
 watchdir = ./src
 glob = *.coffee
 cmd = coffee --output js/ src/*
 
-[Just another]
-watchdir = ./src
-glob = *.coffee
-cmd = echo "We can have several watchers in one config"
+[myproject:jslint]
+watchdir = ./js
+glob = *.js
+cmd = jslint js/*.js
 
 
 
