--- a/examples/longrunning/projectwatch.cfg
+++ b/examples/longrunning/projectwatch.cfg
@@ -1,7 +1,7 @@
-[Long runnin command]
+[myproject:tests]
 watchdir = .
 glob = *.txt
-cmd = echo "this will take a long time" && sleep 5
+cmd = echo "Running tests simulation" && sleep 5 && echo "DONE" && exit 0
 
 
 
