Depend on express-share

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         , "underscore": ""
         , "gex": ""
         , "express": ""
+        , "express-share": ">= 0.1.1"
         , "jade": ""
         , "now": ""
     }
