Use Walker instead of findit. Some status clean up.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     , "dependencies": {
         "coffee-script": ""
         , "watch": ""
-        , "findit": ""
+        , "walker": ""
         , "iniparser": ""
         , "underscore": ""
         , "gex": ""
